[package]
name = "concurrency"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros", "time"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "concurrency"
harness = false
