[package]
name = "select"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio = { version = "1.45", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
wiremock = "0.6"
